--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -212,5 +212,83 @@ body {
       opacity: 1;
     }
   }
+}
+
+
+.filters {
+  margin: 30px auto 0 auto;
+  max-width: 920px;
+  background: $mainColor;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+
+  &__form {
+    box-sizing: border-box;
+    padding: 15px;
+    height: 75px;
+    display: flex;
+    align-items: center;
+  }
+
+  &__label {
+    margin-right: 15px;
+    position: relative;
+
+    &:after {
+      font-size: 12px;
+      content: "▼";
+      position: absolute;
+      color: white;
+      right: 7px;
+      bottom: 7px;
+      z-index: 1;
+      text-align: center;
+      pointer-events: none;
+    }
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+
+  &__select {
+    -webkit-appearance: none;
+    appearance: none;
+    -moz-appearance: none;
+    font-family: Montserrat;
+    width: 160px;
+    height: 30px;
+    background: $secondColor;
+    color: $textColor;
+    border: 1px solid #A5B1C2;
+    box-sizing: border-box;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    padding: 5px;
+
+    &:focus {
+      outline: 1px solid white;
+    }
+  }
+
+  &__option {
+    min-height: 30px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    padding: 5px;
+  }
+
+  &__title {
+    margin: 0;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 15px;
+    color: $textColor;
+    text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+  }
 
 }
