--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -9,6 +9,10 @@ body {
   margin: 0;
 }
 
+.main {
+  min-height: calc(100vh - 70px - 200px - 70px - 30px);
+}
+
 .lookingfor {
   font-family: 'Montserrat', sans-serif;
   background-color: $backgroundColor;
@@ -37,6 +41,11 @@ body {
     line-height: 70px;
     color: $textColor;
     text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+    transition: opacity 0.5s;
+
+    &:hover {
+      opacity: 0.5;
+    }
   }
 
   &__bar {
@@ -267,10 +276,13 @@ body {
     line-height: 17px;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     padding: 5px;
+    cursor: pointer;
 
     &:focus {
       outline: 1px solid white;
     }
+
+
   }
 
   &__option {
@@ -291,4 +303,181 @@ body {
     text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
   }
 
+}
+
+.cards {
+  margin: 30px auto 0 auto;
+  max-width: 920px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.card {
+  width: 445px;
+  background: $mainColor;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+  margin-bottom: 30px;
+
+  &__header {
+    height: 44px;
+    background: $secondColor;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__info {
+    padding: 10px;
+    display: flex;
+  }
+
+  &__rating-container {
+    width: 24px;
+    height: 24px;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+    border-radius: 50%;
+    background-color: $mainColor;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__rating {
+    margin: 0;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 15px;
+    color: $textColor;
+    text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+  }
+
+  &__nickname {
+    margin: 0 0 0 5px;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 24px;
+    color: $textColor;
+    text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+    cursor: pointer;
+    transition: opacity 0.5s;
+
+    &:hover {
+      opacity: 0.5;
+    }
+  }
+
+  &__text {
+    margin: 0;
+    padding: 10px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: $textColor;
+    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.25);
+  }
+
+
+  &__badges {
+    padding: 10px;
+    display: flex;
+  }
+
+  &__badge {
+    margin-left: 10px;
+    width: 24px;
+    height: 24px;
+
+    background-color: $mainColor;
+    background-size: cover;
+    background-position: center;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+
+    &_eng {
+      background-image: url(../images/flag-en.jpg);
+    }
+
+    &_discord {
+      background-image: url(../images/Discord-Logo-White.png);
+    }
+  }
+
+}
+
+
+.pagination {
+  margin: 0 auto 0 auto;
+  max-width: 920px;
+  display: flex;
+  justify-content: center;
+
+  &__item {
+    width: 30px;
+    height: 30px;
+    background-color: $mainColor;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 30px;
+    text-align: center;
+    color: $textColor;
+    text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+    cursor: pointer;
+    transition: background-color 0.5s;
+    margin-right: 5px;
+
+    &:last-child {
+      margin-right: 0;
+    }
+
+    &:hover {
+      background-color: $secondColor;
+    }
+
+    &_current {
+      background-color: $secondColor;
+    }
+  }
+}
+
+.footer {
+  margin: 30px auto 0 auto;
+  background: $mainColor;
+
+  &_container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 70px;
+  }
+
+  &__logo {
+    text-decoration: none;
+    margin: 0;
+    font-weight: 600;
+    font-size: 50px;
+    line-height: 1;
+    color: $textColor;
+    text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+    transition: opacity 0.5s;
+
+    &:hover {
+      opacity: 0.5;
+    }
+  }
+
+  &__copyright {
+    text-decoration: none;
+    margin: 0;
+    padding: 0;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 1;
+    color: $textColor;
+    text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+    transition: opacity 0.5s;
+
+    &:hover {
+      opacity: 0.5;
+    }
+  }
 }
