--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -900,12 +900,29 @@ body {
       flex-wrap: wrap;
       justify-content: space-between;
       padding: 15px 15px 0 15px;
+
+      &_column {
+        flex-direction: column;
+        padding: 0;
+      }
+    }
+
+    &__textarea {
+      width: 100%;
+    }
+
+    &__button {
+      width: 100%;
     }
 
     &__label {
       margin-right: 0;
       margin-bottom: 15px;
       width: 47.5%;
+
+      &_clear {
+        width: 100%;
+      }
     }
 
     &__select {
@@ -957,6 +974,11 @@ body {
       justify-content: center;
     }
   }
+
+  .popup__container {
+    max-width: none;
+    width: 80%;
+  }
 }
 
 @media screen and (max-width: 420px) {
@@ -967,7 +989,6 @@ body {
       flex-direction: column;
       flex-wrap: wrap;
       justify-content: space-between;
-      padding: 15px 15px 0 15px;
     }
 
     &__label {
@@ -997,6 +1018,11 @@ body {
     min-height: 44px;
     height: auto;
     flex-wrap: wrap;
+  }
+
+  .popup__container {
+    max-width: none;
+    width: 100%;
   }
 }
 
