--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -879,9 +879,21 @@ body {
 }
 
 @media screen and (max-width: 768px) {
+  .nav_container {
+    position: relative;
+  }
+
   .nav__bar {
     flex-direction: column;
     display: none;
+    position: absolute;
+    top: 70px;
+    left: 0;
+    right: 0;
+    z-index: 99;
+    height: auto;
+    background-color: $mainColor;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
   }
 
   .nav__bar_opened {
