--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -71,6 +71,7 @@ body {
     color: #FFFFFF;
     text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
     transition: background-color 0.5s;
+    cursor: pointer;
 
     &:hover {
       background-color: $secondColor;
@@ -613,6 +614,7 @@ body {
   right: 0;
   top: 0;
   bottom: 0;
+  z-index: 99;
   background-color: rgba(0, 0, 0, 0.5);
   flex-direction: column;
   justify-content: center;
